Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,5 +43,7 @@ steps:
     searchFolder: '$(System.DefaultWorkingDirectory)'
     uiTests: true
     vsTestVersion: 'toolsInstaller'
+    runSettingsFile: 'Microsoft.Dynamics365.UIAutomation.Sample/AzureDevOps/EasyRepro.runsettings'
+    codeCoverageEnabled: false
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
