--- a/Microsoft.Dynamics365.UIAutomation.Browser/packages.config
+++ b/Microsoft.Dynamics365.UIAutomation.Browser/packages.config
@@ -6,4 +6,5 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net46" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net46" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="85.0.4183.8700" targetFramework="net46" />
 </packages>
