--- a/Microsoft.Dynamics365.UIAutomation.Sample/packages.config
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/packages.config
@@ -17,6 +17,7 @@
   <package id="Selenium.Firefox.WebDriver" version="0.26.0" targetFramework="net46" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net46" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net46" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="85.0.4183.8700" targetFramework="net46" />
   <package id="SpecFlow" version="2.4.0" targetFramework="net46" />
   <package id="SpecFlow.MsTest" version="2.4.0" targetFramework="net46" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net46" />
