--- a/Microsoft.Dynamics365.UIAutomation.Api.UCI/packages.config
+++ b/Microsoft.Dynamics365.UIAutomation.Api.UCI/packages.config
@@ -3,9 +3,10 @@
   <package id="Microsoft.ApplicationInsights" version="2.11.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="Otp.NET" version="1.2.1" targetFramework="net46" />
+  <package id="Selenium.Chrome.WebDriver" version="84.0.0" targetFramework="net46" />
   <package id="Selenium.Support" version="3.14.0" targetFramework="net46" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net46" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="85.0.4183.8700" targetFramework="net46" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="84.0.4147.3001" targetFramework="net46" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net46" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net46" />
   <package id="System.Memory" version="4.5.3" targetFramework="net46" />
