--- a/Microsoft.Dynamics365.UIAutomation.Api/packages.config
+++ b/Microsoft.Dynamics365.UIAutomation.Api/packages.config
@@ -3,9 +3,10 @@
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net46" />
   <package id="FluentAssertions" version="5.10.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="Selenium.Chrome.WebDriver" version="84.0.0" targetFramework="net46" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net46" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net46" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="85.0.4183.8700" targetFramework="net46" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="84.0.4147.3001" targetFramework="net46" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
 </packages>
 <!--Copyright (c) Microsoft Corporation. All rights reserved.
