--- a/Microsoft.Dynamics365.UIAutomation.Sample/app.config
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/app.config
@@ -27,9 +27,9 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="OnlineUsername" value="pravella@ultimatemedical.edu" />
-    <add key="OnlinePassword" value="Kavyar@143" />
-    <add key="OnlineCrmUrl" value="https://umastaging.crm.dynamics.com/" />
+    <add key="OnlineUsername" value="CRMTest_Dir@ultimatemedical.edu" />
+    <add key="OnlinePassword" value="###" />
+    <add key="OnlineCrmUrl" value="https://umatest1.crm.dynamics.com/" />
     <add key="MfaSecretKey" value="" />
     <add key="AzureKey" value="" />
     <!-- IE,Chrome,Firefox,Edge,Remote-->
