--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ steps:
   inputs:
     testSelector: 'testAssemblies'
     testAssemblyVer2: |
-      **\*UIAutomation.Sample.dll
+      **\*ToBeDeleted.dll
       !**\*TestAdapter.dll
       !**\obj\**      
     searchFolder: '$(System.DefaultWorkingDirectory)'
