--- a/Microsoft.Dynamics365.UIAutomation.Sample/app.config
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/app.config
@@ -5,6 +5,7 @@
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
   </configSections>
+  
 
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -22,14 +23,25 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.2.0" newVersion="4.1.2.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="OnlineUsername" value="CRMTest_Dir@ultimatemedical.edu" />
-    <add key="OnlinePassword" value="###" />
-    <add key="OnlineCrmUrl" value="https://umatest1.crm.dynamics.com/" />
+    <add key="UMAUsername" value="CRMTest_DIROPS@ultimatemedical.edu" />
+	<add key="UMAPassword" value="eyed--5T&amp;tZ" />
+	<add key="UMACrmUrl" value="https://umatest1.crm.dynamics.com/" />
+	<add key="PowerAppsUsername" value="CRMTest_DIROPS@ultimatemedical.edu" />
+	<add key="PowerAppsPassword" value="eyed--5T&amp;tZ" />
+	<add key="PowerAppsCrmUrl" value="https://make.powerapps.com/" />
     <add key="MfaSecretKey" value="" />
     <add key="AzureKey" value="" />
     <!-- IE,Chrome,Firefox,Edge,Remote-->
@@ -53,7 +65,7 @@
     </roleManager>
   </system.web>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <system.diagnostics>
     <sources>
@@ -85,4 +97,5 @@
   </system.diagnostics>
 <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><unitTestProvider name="MsTest" /></specFlow></configuration>
+    <unitTestProvider name="MsTest" />
+  </specFlow></configuration>
