--- a/ToBeDeleted/packages.config
+++ b/ToBeDeleted/packages.config
@@ -4,4 +4,5 @@
   <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net46" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net46" />
   <package id="Selenium.WebDriver.ChromeDriver" version="85.0.4183.8700" targetFramework="net46" />
+  <package id="SpecFlow" version="3.4.14" targetFramework="net46" />
 </packages>
