--- a/Microsoft.Dynamics365.UIAutomation.Sample/packages.config
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/packages.config
@@ -10,6 +10,7 @@
   <package id="MongoDB.Bson" version="2.7.2" targetFramework="net46" />
   <package id="MongoDB.Driver" version="2.7.2" targetFramework="net46" />
   <package id="MongoDB.Driver.Core" version="2.7.2" targetFramework="net46" />
+  <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net46" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net46" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net46" />
