--- a/Microsoft.Dynamics365.UIAutomation.Api.UCI/packages.config
+++ b/Microsoft.Dynamics365.UIAutomation.Api.UCI/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.ApplicationInsights" version="2.11.0" targetFramework="net46" />
+  <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="Otp.NET" version="1.2.1" targetFramework="net46" />
   <package id="Selenium.Support" version="3.14.0" targetFramework="net46" />
