--- a/Microsoft.Dynamics365.UIAutomation.Api/packages.config
+++ b/Microsoft.Dynamics365.UIAutomation.Api/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net46" />
   <package id="FluentAssertions" version="5.10.3" targetFramework="net46" />
+  <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net46" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net46" />
