--- a/Microsoft.Dynamics365.UIAutomation.Sample/Microsoft.Dynamics365.UIAutomation.Sample.csproj
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/Microsoft.Dynamics365.UIAutomation.Sample.csproj
@@ -146,6 +146,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>PowerAppsFlows.feature</DependentUpon>
     </Compile>
+    <Compile Include="UMA_CRM_Features\QuickCreate.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QuickCreate.feature</DependentUpon>
+    </Compile>
     <Compile Include="UMA_CRM_Steps\ApplicationsSteps.cs" />
     <Compile Include="UMA_CRM_Steps\JobOrdersSteps.cs" />
     <Compile Include="UMA_CRM_Steps\LeadsSteps.cs" />
@@ -214,6 +219,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SharedAPI\AzureInsights\UploadTelemetry.cs" />
     <Compile Include="UMA_CRM_Steps\PowerAppsRunsSteps.cs" />
+    <Compile Include="UMA_CRM_Steps\QuickCreateSteps.cs" />
     <Compile Include="Web\AddConnection.cs" />
     <Compile Include="Web\BusinessProcessFlow\BusinessProcessFlow.cs" />
     <Compile Include="Web\CommandBar\CommandButton.cs" />
@@ -335,6 +341,10 @@
     <None Include="UMA_CRM_Features\PowerAppsFlows.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>PowerAppsFlows.feature.cs</LastGenOutput>
+    </None>
+    <None Include="UMA_CRM_Features\QuickCreate.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>QuickCreate.feature.cs</LastGenOutput>
     </None>
     <None Include="Web\WebClient.orderedtest" />
   </ItemGroup>
