--- a/Microsoft.Dynamics365.UIAutomation.Sample/Microsoft.Dynamics365.UIAutomation.Sample.csproj
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/Microsoft.Dynamics365.UIAutomation.Sample.csproj
@@ -290,6 +290,7 @@
     <Compile Include="Web\NegativeScenarios\RelatedGrid\InvalidRelatedSort.cs" />
     <Compile Include="Web\NegativeScenarios\RelatedGrid\InvalidRelatedSwitchView.cs" />
     <Compile Include="Web\Notification\Notifications.cs" />
+    <Compile Include="Web\QuickCreate\QuickCreateResourceAddress.cs" />
     <Compile Include="Web\QuickCreate\QuickCreateAccount.cs" />
     <Compile Include="Web\Read\OpenAccount.cs" />
     <Compile Include="Web\Read\OpenCase.cs" />
