--- a/Microsoft.Dynamics365.UIAutomation.Sample/app.config
+++ b/Microsoft.Dynamics365.UIAutomation.Sample/app.config
@@ -38,7 +38,7 @@
   <appSettings>
     <add key="UMAUsername" value="CRMTest_DIROPS@ultimatemedical.edu" />
 	<add key="UMAPassword" value="eyed--5T&amp;tZ" />
-	<add key="UMACrmUrl" value="https://umatest1.crm.dynamics.com/" />
+	<add key="UMACrmUrl" value="https://umastaging.crm.dynamics.com/" />
 	<add key="PowerAppsUsername" value="CRMTest_DIROPS@ultimatemedical.edu" />
 	<add key="PowerAppsPassword" value="eyed--5T&amp;tZ" />
 	<add key="PowerAppsCrmUrl" value="https://make.powerapps.com/" />
