--- a/.gitignore
+++ b/.gitignore
@@ -331,3 +331,6 @@ ASALocalRun/
 /Microsoft.Dynamics365.UIAutomation.Sample/Reports
 /TestCases/Reports/Log_10_15_2020/Reports
 /TestCases/Reports
+/Microsoft.Dynamics365.UIAutomation.Sample/UMA_CRM_Features/SecurityRolesAccess.feature
+/Microsoft.Dynamics365.UIAutomation.Sample/UMA_CRM_Features/SecurityRolesAccess.feature.cs
+/Microsoft.Dynamics365.UIAutomation.Sample/UMA_CRM_Steps/SecurityRolesAccessSteps.cs
